# optimize_contraction

./: .flake8  .pre-commit-config.yaml  Cargo.toml  README.md  abstract_tensor.cpp  abstract_tensor.hpp  input_sample.json  main.cpp  optimize_contraction.py
generate_py/: generate_contraction_code.py  input_sample_gen_py.json
py/: generate_contraction_code.py  optimize_contraction.py
src/: CMakeLists.txt  abstract_tensor.cpp  abstract_tensor.hpp  input_sample.json  main.cpp  main.rs
