[package]
name = "optimize_contraction"
version = "1.7.3"
authors = ["Olivier Gauthé <olivier.gauthe@irsamc.ups-tlse.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
fnv = "1.0.6"
